<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:isScrollContainer="true"
    style="@style/Dracula"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:visibility="gone"
                    style="@style/Dracula"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- BLOCK PROGRESSBAR -->
                    <include layout="@layout/progressbar" />
                    <!-- ENDBLOCK -->

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/new_hub_layout"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp">

                    <EditText
                        android:id="@+id/hub_name"
                        style="@style/Input32"
                        android:inputType="textPersonName"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/hub_name_input" />

                    <EditText
                        android:id="@+id/description"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="40dp"
                        style="@style/Input32"
                        android:maxLines="100"
                        android:maxLength="512"
                        android:layout_width="match_parent"
                        android:minHeight="100dp"
                        android:inputType="textMultiLine"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/description_input" />

                    <LinearLayout
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="40dp">

                        <CheckBox
                            android:layout_gravity="center"
                            android:id="@+id/is_public_checkbox"
                            android:button="@drawable/checkbox_selector"
                            android:paddingLeft="20dp"
                            style="@style/TextView"
                            android:layout_marginBottom="20dp"
                            android:text="@string/is_public_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:visibility="gone"
                            android:id="@+id/hub_password"
                            style="@style/Input32"
                            android:inputType="textPassword"
                            android:layout_gravity="center_horizontal"
                            android:hint="@string/hub_password_input" />

                    </LinearLayout>

                    <Spinner
                        android:id="@+id/game_list"
                        android:entries="@array/test_values"
                        android:spinnerMode="dropdown"
                        android:minHeight="50dp"
                        android:autofillHints="game"
                        android:layout_marginBottom="30dp"
                        android:layout_width="match_parent"
                        android:background="@color/smoothLight"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/next"
                        style="@style/CircledButton"
                        android:text="next"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>