<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/mainLayout"
        android:background="@drawable/hub_public_bg"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/smoothLight"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="12pt"
                android:text="def"
                android:id="@+id/name" />
            <Button
                android:visibility="gone"
                android:id="@+id/select"
                android:layout_gravity="right"
                android:gravity="right"
                android:background="@drawable/typical_ok_button_selector"
                style="@style/TypicalButton"
                android:text="Go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_marginLeft="20dp"
            android:textSize="10pt"
            android:textColor="@color/lightGray"
            android:text="@string/game_word"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/game"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:gravity="right">
            <LinearLayout
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="10pt"
                    android:textColor="@color/lightGray"
                    android:text="owner: 123"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/owner"/>
            </LinearLayout>
            <TextView
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                android:textSize="10pt"
                android:textColor="@color/smoothLight"
                android:text="14 / 18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/players"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/subinfo"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:background="@color/smoothBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <TextView
            android:textAlignment="viewEnd"
            android:layout_weight="1"
            android:textSize="10pt"
            android:textColor="@color/mediumGray"
            android:text="@string/hub_info_words"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

            <TextView
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                android:textSize="10pt"
                android:textColor="@color/smoothLight"
                android:text="Some Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/hub_description"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                android:textSize="10pt"
                android:textColor="@color/mediumGray"
                android:text="@string/game_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:textAlignment="viewEnd"
                android:layout_weight="1"
                android:textSize="10pt"
                android:textColor="@color/smoothLight"
                android:text="Some Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/game_description"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:visibility="gone"
                android:id="@+id/hub_password"
                style="@style/Input32"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hub_password_input" />

            <LinearLayout
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@drawable/typical_err_button_selector"
                    style="@style/TypicalButton"
                    android:id="@+id/close"
                    android:text="Close"/>

                <Button
                    android:background="@drawable/typical_ok_button_selector"
                    style="@style/TypicalButton"
                    android:id="@+id/connect"
                    android:text="Connect"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>